# ev-conversion-dashboard

./: README.md
ev-alltrax/: Cargo.toml  README.md
ev-alltrax/src/: ev-alltrax.service  main.rs
ev-dashboard/: README.md  next.config.js  package-lock.json  package.json
ev-dashboard/pages/: index.js
ev-display/: Cargo.toml
ev-display/src/: ev-display.service  main.rs
ev-energy-monitor/: Cargo.toml
ev-energy-monitor/src/: ev-energy-monitor.service  main.rs
ev-gps/: Cargo.toml  README.md
ev-gps/src/: ev-gps.service  main.rs
ev-mcu/: Cargo.toml  README.md
ev-mcu/src/: ev-mcu.service  main.rs
