[package]
name = "ev-energy-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-modbus = { version = "*", default-features = false, features = ["rtu-sync"] }
tokio-serial = "=5.4.4"
paho-mqtt = { version = "0.12", features=["vendored-ssl"] }